--- a/09.Escalas.tex
+++ b/09.Escalas.tex
@@ -1,138 +1,64 @@
-	\chapter{OBRAS Y ESCALAS DEL EXPERIMENTO}
-    % 09.Obras y escalas a utilizar y su estudio: por qué suena mal la hexafónica.
-    \section{OBRAS A MODIFICAR}
-    	El objetivo de este experimento es modificar algunas obras que ya están compuestas mediante el método dodecafónico, y cambiar su serialismo de doce notas por otro pseudoserialismo de menos notas. Para abarcar distintos estilos compositivos y hacer este estudio más riguroso, se han escogido obras de los tres principales compositores dodecafónicos: Schoenberg, Berg y Webern.
-        
-        Sin embargo, no se han escogido obras de compositores posteriores ni serialistas integrales. Uno de los motivos es porque interesa en este estudio la relación entre los sonidos: no se modifican más que las alturas de las notas, y por tanto no importa el resto de elementos musicales. Que estén compuestos serialmente no afecta a las conclusiones de este estudio.
-        
-        Por otro lado, los compositores posteriores a Schoenberg todavía no han pasado al dominio público. Eso impide, por desgracia, que se pueda trabajar libremente con su música.
-        
-        Por último, el hecho de que cada nota tenga su propia dinámica, su propia articulación o su propio timbre hace de las obras serialistas integrales que sean difíciles de manipular. Además, como los audios están hechos mediante ordenador y no con intérpretes reales, la calidad y la intención musical de estas partituras tan complicadas nunca pueden plasmarse a la perfección.
-        
-    	\subsection{SCHOENBERG: \textit{Suite para piano}, OP. 25}
-        	La primera obra que pasará por el algoritmo de modificación serial es la Suite para piano de Schoenberg, ya comentada en el capítulo \ref{suitechapter}. En dicha sección se estudió su serie principal, la estructura general de la obra y su razón de ser, así como su tercer movimiento en profundidad.
-            
-            http://www.ccarh.org/publications/data/humdrum/tonerow/files/schoenberg/schoenberg04.pc.krn
-            
-    	\subsection{BERG: \textit{Lied der Lulu}}
-        	La gran calidad emocional de la música de Alban Berg se refleja en esta segunda obra: es una de las arias más destacadas de su segunda ópera, \textit{Lulu}. El arreglo a voz y piano fue realizado por Erwin Stein, un músico austriaco amigo y discípulo de Schoenberg.
-        	
-        	El libreto de la obra está basado en dos tragedias de Frank Wedekind: ``El espíritu de la tierra'' y ``La Caja de Pandora''. 
-        	
-        	%argumento de la ópera
-        	
-        	
-        	
-        	%series utilizadas (por personaje)
-
-		BERG: LULU: PRIMARY ROW
+	\chapter{ESCALAS Y OBRAS DEL EXPERIMENTO}
+    % 09.Obras y escalas a utilizar y su estudio: por qué suena mal la hexafónica.	
 		
-		{0,4,5,2,7,9,6,8,B,A,3,1} (Jarman)
-		
-		http://www.ccarh.org/publications/data/humdrum/tonerow/files/berg/berg10.pc.krn
-            
-        % argumento de esta aria
-        
-        \subsection{BERG: \textit{Der Wein}}
-        
-        BERG: DER WEIN
-        
-        {2,4,5,7,9,A,1,6,8,0,B,3}
-        
-        http://www.ccarh.org/publications/data/humdrum/tonerow/files/berg/berg09.pc.krn
-        
-        Der Wein (The Wine) (1929), Concert Aria for Soprano and Orchestra
-        
-        Alban Berg's concert aria Der Wein (1929) is a setting of three poems from Charles Baudelaire's ``Le Vin'' as translated into German by Stephan George: "Die Seele des Weines" (The Wine's Soul), "Der Wein der Liebenden" (The Wine of Lovers), "Der Wein des Einsamen" (The Wine of the Lonely One). The poems express not only the happiness and confidence (real or imagined) of those who enjoy wine's restorative powers, but also wine's celebration of itself as a giver of strength to the weak, pride to the poor, and inspiration to poets.
-
-		Appropriately, Berg's setting is lush, evoking earthly sensations through the use of jazz elements and tango rhythms in the manner so popular in Europe in the 1920s. (Compare, for example, the contemporaneous music of Kurt Weill and Paul Hindemith.) The principal twelve-tone row Berg fashioned for Der Wein lends itself to the construction of diatonic sonorities: the first six pitches comprise most of a D minor scale, while of the row's remaining six, five are part of a G flat major scale. Few of Berg's works place as apparent an emphasis on symmetry as does Der Wein. There are no breaks between the poems, and the two outer songs provide the exposition and recapitulation of a sonata-form movement. ``Die Seele des Weines'' consists of an orchestral introduction, first and second theme groups with a transition, and closing material. All of this music, albeit abbreviated, returns in "Der Wien des Einsamen" in the same order and is followed by a coda. Where a traditional development section might be expected, Berg instead interpolates the scherzo-like "Der Wein der Liebenden." This middle song itself falls into three sections, the third of which is a retrograde of the second. Extended palindromes of this sort reappear in Berg's opera Lulu (1935), notably in the film music of Act II.
-
-		Der Wein was commissioned by Ruzena Herlinger, who gave the first performance of the work in Frankfurt on June 4, 1930.
-		
-		\subsection{WEBERN: \textit{Variations}, OP. 27}     
-		
-		WEBERN: OP. 27--VARIATIONS FOR PIANO
-		
-		{3,B,A,2,1,0,6,4,7,5,9,8}
-		
-		\subsection{WEBERN: \textit{3 Lieder}, OP. 18}
-		
-		WEBERN: OP. 18, NO. 1, "SCHATZERL KLEIN"
-		
-		{0,B,5,8,A,9,3,4,1,7,2,6}
-		
-		WEBERN: OP. 18, NO. 2, "ERLOSUNG"
-		
-		{6,9,5,8,4,7,3,B,2,A,1,0}
-				
-		WEBERN: OP. 18, NO. 3, "AVE, REGINA COELORUM"
-		
-		{4,3,7,6,5,B,A,2,1,0,9,8}	
-		
-	\section[E. INTERVÁLICAS, ESCALAS Y FUNCIONES E-INDUCIDAS]{ESCALAS INTERVÁLICAS, ESCALAS Y FUNCIONES E-INDUCIDAS}
+	\section{ESCALAS INTERVÁLICAS, ESCALAS Y FUNCIONES}
 	
 		Una \textit{escala interválica} es una secuencia ordenada de números naturales -- una secuencia de intervalos entre notas -- tales que la suma de todos ellos da 12. Así solo se consideran válidas las escalas equivalentes octava a octava: todos los intervalos de la escala deben sumar el número de semitonos de una octava. Por ejemplo, la escala diatónica jónica (o escala mayor) tiene como secuencia (2, 2, 1, 2, 2, 2, 1).
 		
 		Dada una escala interválica de longitud L y una nota fija inicial, la secuencia de intervalos se plasma en una secuencia de notas de longitud L+1. Se construye comenzando por la nota inicial y sumando cada intervalo para conseguir la nota siguiente. 
 		
-		Con la escala mayor y la nota Re se consigue \{Re, Mi, Fa$\#$, Sol, La, Si, Do$\#$, Re\}, ya que es equivalente a \{2, 2+\textbf{2}=4, 4+\textbf{2}=6, 6+\textbf{1}=7, 7+\textbf{2}=9, 9+\textbf{2}=11, 11+\textbf{2}=13, 13+\textbf{1}=14\}. Por construcción, la última nota debe ser equivalente a la primera, ya que en el último paso habremos sumado a la nota inicial todos los términos de la secuencia interválica, que por definición suman 12.
+		Con la escala mayor y la nota Re se consigue \{Re, Mi, Fa$\#$, Sol, La, Si, Do$\#$, Re\}, ya que es equivalente a \{2, 2+\textbf{2}=4, 4+\textbf{2}=6, 6+\textbf{1}=7, 7+\textbf{2}=9, 9+\textbf{2}=11, 11+\textbf{2}=13, 13+\textbf{1}=14\}. Por construcción, la última nota debe ser equivalente a la primera, ya que en el último paso habremos sumado a la nota inicial todos los términos de la secuencia interválica, y por definición suman 12.
 		
 		De esta forma, se puede definir una \textit{escala-k} como el conjunto de notas generadas por una escala interválica desde la nota $k$. Por ejemplo, el conjunto anterior sería la escala-2 mayor; es decir, la escala de Re mayor. Una escala generada por una secuencia de intervalos con longitud L tiene L notas. $\text{L}\leq 12$ ya que una escala siempre es un subconjunto de la escala cromática: $\text{E}_k\subseteq\mathbb{Z}/(12)$
 		
-		Una \textit{función a una escala-k} (E$_k$) es una función $f$ que transforma cada nota de la escala cromática a un valor de la escala E$_k$. Entonces $f : \mathbb{Z}/(12) \rightarrow \text{E}_k$ reduce las notas de una melodía a solamente la escala escogida. Las funciones a escalas se representan de la siguiente manera, con la primera fila representando el dominio de $f$ -- la escala cromática, la segunda su imagen -- la escala E$_k$, y la tercera su secuencia interválica.
-		\footnotesize{
+		Una \textit{función a una escala-k} es una función $f$ que transforma cada nota de la escala cromática a un valor de la escala E$_k$. Entonces $f : \mathbb{Z}/(12) \rightarrow \text{E}_k$ reduce las notas de una melodía a solamente la escala escogida. Las funciones a escalas se representan de la siguiente manera, con la primera fila representando el dominio de $f$ -- la escala cromática; la segunda su imagen -- la escala E$_k$; y la tercera su secuencia interválica.		
 		$$\left.\begin{matrix}
 		0&1&2&\ldots&10&11\\
 		f(0)&f(1)&f(2)&\ldots&f(10)&f(11)\\
 		f(1)-f(0)&f(2)-f(1)&f(3)-f(2)&\ldots&f(11)-f(10)&12+f(0)-f(11)
 		\end{matrix}\right.$$
-		}
-		\small
 		
-		El proceso verdaderamente interesante está en averiguar, dada una escala E (de momento, sin importar su $k$), cuál es la mejor función que transforma melodías cromáticas en melodías en E. Estas son las \textit{funciones} E-\textit{inducidas}. 
+		En realidad, la $k$ de la escala-$k$ no es especialmente relevante, porque una escala-$k+1$ es la transportada de una $k$. Se puede escoger sin pérdida de generalidad $k=0$ a partir de ahora, y así todas comenzarán en Do.
 		
-		¿Cuáles serán las características de esas funciones óptimas?
+		El proceso verdaderamente interesante está en averiguar, dada una escala E, cuál es la mejor función que transforma melodías cromáticas en melodías en E. Estas son las \textit{funciones} E-\textit{inducidas}.
 		
-		\begin{enumerate}
-			\item Conservan la estructura serial.
-			\item Conservan el parecido con la melodía original.
-		\end{enumerate}
+		¿Cuáles serán las características de esas funciones óptimas? Deben conservar la estructura serial y deben conservar el parecido con la melodía original.
 		
-		La mayor prioridad es conservar la estructura serial de las piezas; por tanto, todas las notas deben aparecer con la menor frecuencia, y se debe evitar jerarquías entre las notas en la medida de lo posible. Si $|\text{E}|<12$, $f$ no puede ser inyectiva, por lo que va a haber elementos repetidos en la imagen. Queremos la $f$ que mejor distribuya esas repeticiones, que distribuya las notas de E a lo largo de la escala cromática.
+	\section{FUNCIONES BIEN DISTRIBUIDAS}
 		
-		¿Cómo se pueden distribuir estas notas de manera que tengan todas \textit{casi} la misma frecuencia? Lo óptimo sería que todas tuvieran la misma frecuencia, pero eso solo pasará cuando $|\text{E}|$ divida a 12. Por ejemplo, si E = \{$a_1,a_2,a_3,a_4,a_5,a_6$\}, existen funciones tales que cada nota de la imagen se repite 2 veces. La siguiente función E-inducida $f$ cumpliría la condición de buena distribución:
+		La mayor prioridad es conservar la estructura serial de las piezas; por tanto, todas las notas deben aparecer con la menor frecuencia posible, y se debe evitar jerarquías entre las notas en la medida de lo posible. Si $|\text{E}|<12$, $f$ no puede ser inyectiva, por lo que va a haber elementos repetidos en la imagen. Queremos la $f$ que mejor distribuya esas repeticiones, que distribuya las notas de E a lo largo de la escala cromática.
+		
+		Lo óptimo sería que todas tuvieran la misma frecuencia, pero eso solo pasará cuando $|\text{E}|$ divida a 12. Por ejemplo, si E = \{$a_1,a_2,a_3,a_4,a_5,a_6$\} -- entonces $|\text{E}|=6$, existen funciones tales que cada nota de la imagen se repite exactamente 2 veces. La siguiente función E-inducida $f$ cumpliría la condición de buena distribución:
+				
 		$$\left.\begin{matrix}
 		\text{Cromática}&0&1&2&3&4&5&6&7&8&9&10&11\\
 		\text{Escala E}&a_1&a_1&a_2&a_2&a_3&a_3&a_4&a_4&a_5&a_5&a_6&a_6\\
+		\text{Intervalos}&&&&&&\ldots\\
 		\end{matrix}\right.$$
 		
-		Entonces hay $\frac{|\text{E}|}{12}$ elementos en $\mathbb{Z}/(12)$ que son transformados en la misma nota. La \textit{frecuencia} de las notas es la misma para todas las notas.
+		En cambio, si $|\text{E}|$ no divide a 12 no hay funciones E-inducidas totalmente distribuidas. No existe una sola frecuencia que puedan compartir todas las notas de E. Sin embargo, sí se pueden encontrar dos frecuencias consecutivas, $c$ y $c+1$, tales que todos los elementos de E tengan o frecuencia $c$ o frecuencia $c+1$. Esto es lo más parecido a que todas tengan la misma frecuencia, y se va a probar que siempre es posible a continuación. 
 		
-		En cambio, si $|\text{E}|$ no divide a 12 no hay funciones E-inducidas bien distribuidas. No existe una sola frecuencia que puedan compartir todas las notas de E. Sin embargo, sí se pueden encontrar dos frecuencias consecutivas, $c$ y $c+1$, tales que todos los elementos de E tienen o frecuencia $c$ o frecuencia $c+1$.
+		La situación es equivalente a que E se pueda dividir en dos subconjuntos disjuntos Q y R, con $|\text{Q}|=q$ y $|\text{R}|=r$ (entonces $q+r=|\text{E}|$), tales que la frecuencia de las notas en Q es $c$ y la frecuencia de las notas en R es $c+1$. En resumen, para probar que Q y R existen, debemos encontrar un $c$, un $q$ y un $r$ naturales para los que $cq + (c+1)r=12$.
 		
-		Es decir, que E se puede dividir en dos subconjuntos disjuntos Q y R, con $|\text{Q}|=q$ y $|\text{R}|=r$ (entonces $q+r=|\text{E}|$), tales que la frecuencia de las notas en Q es $c$ y la frecuencia de las notas en R es $c+1$. En resumen, para probar que Q y R existen, debemos encontrar un $c$, un $q$ y un $r$ naturales para el que $cq + (c+1)r=12$.
-		
-		$$cq + (c+1)r =
+		$cq + (c+1)r =
 		cq + cr + r =
 		c(q+r) + r =
-		c|\text{E}| + r = 12$$
+		c|\text{E}| + r = 12$, lo cual se cumple por el algoritmo de la división, que asegura que al dividir 12 entre $|\text{E}|$ existen su cociente $c$ y su resto $r\geq0$. \qed
 		
-		Lo cual es cierto por el algoritmo de la división, que asegura que al dividir 12 entre $|\text{E}|$ existen su cociente $c$ y su resto $r$. El mismo argumento se sigue con $n$ arbitrario en vez de 12.\qed
-		
-		El siguiente gráfico describe, para cada posible $|\text{E}|$ en cada fila, la frecuencia óptima de sus elementos. Para una escala E con tamaño $e$, la fila $e\ |\ a_1\ a_2\ a_3\ \ldots\ a_{12}$ cumple:
-		
-		\begin{enumerate}
-			\item Los $a_t$ son el número de notas en E con frecuencia $t$.
-			
-			\item $\sum_{t=1}^{12}a_t=e$, porque cada nota de E debe aparecer en una sola columna.
-			
-			\item $\sum_{t=1}^{12}a_t*t=12$, porque la suma de cada $a_t$ por su frecuencia es el número de elementos original.
-			
-			\item Si $e\ |\ 12$ solo hay una frecuencia, $c$, tal que $a_c$ es positivo. Si $e\not|\ 12$ solo hay dos frecuencias, $c$ y $c+1$, tales que $a_c$ y $a_{c+1}$ son positivos. Así la función tiene una distribución óptima.
-		\end{enumerate}
+		El siguiente gráfico describe, para cada posible $|\text{E}|$ en cada fila, la frecuencia óptima de sus elementos. Las columnas representan las frecuencias de los elementos, y los números de dentro son cada $q$ y $r$ (éste a veces 0).
 		
 		
-		
+%		Para una E con tamaño $e$, la fila $e\ |\ a_1\ a_2\ a_3\ \ldots\ a_{12}$ cumple:
+%		\begin{itemize}
+%			\item Los $a_t$ son el número de notas en E con frecuencia $t$; es decir, $q$ y $r$.
+%			
+%			\item $\sum_{t=1}^{12}a_t=e$, porque cada nota de E debe aparecer en una sola columna.
+%			
+%			\item $\sum_{t=1}^{12}a_t*t=12$, porque la suma de cada $a_t$ por su frecuencia es el número de elementos original.
+%			
+%			\item Si $e\ |\ 12$ solo hay una frecuencia, $c$, tal que $a_c$ es positivo. Si $e\not|\ 12$ solo hay dos frecuencias, $c$ y $c+1$, tales que $a_c$ y $a_{c+1}$ son positivos. Así la función tiene una distribución óptima.
+%		\end{itemize}		
+	
 		$$\begin{array}{l|rrrrrrrrrrrr}
 		&1&2&3&4&5&6&7&8&9&10&11&12\\\hline
 		1&&&&&&&&&&&&1\\\hline
@@ -149,23 +75,33 @@
 		12&12&\\
 		\end{array}$$
 		
+		
+	\section{MÁS REQUISITOS DE LAS FUNCIONES E-INDUCIDAS}
+		
 		Hay que pedir más requisitos a $f$ para que no solo modifique las notas, sino que además las imágenes se parezcan lo máximo posible a sus preimágenes, a las notas originales.
 		
-		$f$ debe ser creciente: si $n<m\in\mathbb{Z}/(12)$ entonces $f(n)\leq f(m)$. Si no lo fuera, aquellas dos notas decrecientes se deberían intercambiar. La condición de monotonía creciente debe ser con respecto a $k$, la nota con la que empieza E($_k$). Así que el orden de $\mathbb{Z}/(12)$ se define como $k<k+1<\ldots<k-2<k-1$.
+		\begin{enumerate}[(1)]
+		\item $f$ debe ser sobreyectiva: si no lo fuera, la música resultante utilizaría una escala más reducida de la deseada.
 		
-		$f$ debe ser sobreyectiva: si no lo fuera, la música resultante utilizaría una escala más reducida de la deseada.
+		\item $f$ debe ser creciente: si no lo fuera, aquellas dos notas decrecientes se deberían intercambiar. También se podrá sumar o restar 12 a las notas que lo requieran. La monotonía debe conservarse, además, en las siguientes octavas, por lo que las funciones deben acabar o por la nota con la que se empieza $+12$ o por una menor que ésta.
 		
-		$f$ debe tener el mayor número de puntos fijos posible: las notas que puedan mantenerse estables al aplicar $f$ deben quedarse igual. Este criterio es menos prioritario que el de la buena distribución.
+		\item $f$ debe tener el mayor número de puntos fijos posible: las notas que puedan mantenerse estables al aplicar $f$ deben quedarse igual. Existen escalas para las que no se puede tener buena distribución, monotonía creciente y todas sus notas fijas, así que este criterio es menos prioritario. 
 		
-		Para los objetivos de este experimento, $f$ debe procurar ser lo menos disonante posible. Por tanto, $f$ debe procurar que las notas disonantes tengan la menor frecuencia posible.
+		Por ejemplo, para la escala \{0, 1, 2\}, si se fijan las tres notas, $f$ empezaría con 0 1 2. Por (2), la última nota debe ser 12 o menos. Entonces los otros tres 1 que faltan no se pueden asignar, ya que después del 2 no puede ir un 1 y antes del 12 no puede ir un 13. Entonces $f$ no estaría bien distribuida. La solución es que solo se fijen dos de las tres notas.
+		$$\left.\begin{matrix}
+		\text{Cromática}&0&1&2&3&4&5&6&7&8&9&10&11\\
+		\text{Escala E}&0&1&2&&&\sout{1}&&&\sout{13}&&&12\\
+		\end{matrix}\right.$$
 		
-		Además, si cabe la posibilidad, las notas de menor frecuencia y mayor frecuencia deben estar separadas entre sí, entremezcladas. Si las notas de menor frecuencia están juntas, parecerá que hay intervalos más grandes de los que realmente hay.
-				
+		
+		\end{enumerate}
+		%distancia
+		
 		Por último, si aún quedan varias $f$ que cumplen todos los requisitos, se escogerá la más grave, la menor de ellas. De esta manera, dada cualquier escala E, la función E-inducida queda unívocamente determinada.
 		
 	\section{ESCALAS UTILIZADAS}
 
-        Randomly generated function
+        Función generada aleatoriamente:
         \begin{lstlisting}
         #include <iostream>
         #include <cstdlib>
@@ -180,31 +116,6 @@
         	for (size_t i = 0; i < 12; i++)
         		v[i] = rand()%12;
         	sort(v, v+12);
-        	for (size_t i = 0; i < 12; i++)
-        		cout << v[i] << " ";
-        	cout << "\n";
-        	return 0;
-        }        
-        \end{lstlisting}
-
-        Chromatic dodecaphonic scales
-        \begin{lstlisting}
-        #include <iostream>
-        #include <cstdlib>
-        
-        using namespace std;
-        using VI = int[12];
-        
-        int main() {
-        	srand (time(NULL));
-        	VI v = {0,1,2,3,4,5,6,7,8,9,10,11};
-        	int a,b;
-        	for (size_t i = 0; i < 24; i++) {
-        		a = rand() % 12;
-        		b = v[i%12];
-        		v[i%12] = v[a];
-        		v[a] = b;
-        	}
         	for (size_t i = 0; i < 12; i++)
         		cout << v[i] << " ";
         	cout << "\n";
@@ -235,3 +146,72 @@
         \text{Escala octotónica:}&0&0&2&3&3&5&6&6&8&9&9&11\\
         \text{Intervalos}&&2&1&&2&1&&2&1&&2&1\\
         \end{matrix}\right.$$
+           
+    \section{OBRAS A MODIFICAR}
+        El objetivo de este experimento es modificar algunas obras que ya están compuestas mediante el método dodecafónico, y cambiar su serialismo de doce notas por otro pseudoserialismo de menos notas. Para abarcar distintos estilos compositivos y hacer este estudio más riguroso, se han escogido obras de los tres principales compositores dodecafónicos: Schoenberg, Berg y Webern.
+        
+        Sin embargo, no se han escogido obras de compositores posteriores ni serialistas integrales. Uno de los motivos es porque interesa en este estudio la relación entre los sonidos: no se modifican más que las alturas de las notas, y por tanto no importa el resto de elementos musicales. Que estén compuestos serialmente no afecta a las conclusiones de este estudio.
+        
+        Por otro lado, los compositores posteriores a Schoenberg todavía no han pasado al dominio público. Eso impide, por desgracia, que se pueda trabajar libremente con su música.
+        
+        Por último, el hecho de que cada nota tenga su propia dinámica, su propia articulación o su propio timbre hace de las obras serialistas integrales que sean difíciles de manipular. Además, como los audios están hechos mediante ordenador y no con intérpretes reales, la calidad y la intención musical de estas partituras tan complicadas nunca pueden plasmarse a la perfección.
+        
+        \subsection{SCHOENBERG: \textit{Suite para piano}, OP. 25}
+        La primera obra que pasará por el algoritmo de modificación serial es la Suite para piano de Schoenberg, ya comentada en el capítulo \ref{suitechapter}. En dicha sección se estudió su serie principal, la estructura general de la obra y su razón de ser, así como su tercer movimiento en profundidad.
+        
+        http://www.ccarh.org/publications/data/humdrum/tonerow/files/schoenberg/schoenberg04.pc.krn
+        
+        \subsection{BERG: \textit{Lied der Lulu}}
+        La gran calidad emocional de la música de Alban Berg se refleja en esta segunda obra: es una de las arias más destacadas de su segunda ópera, \textit{Lulu}. El arreglo a voz y piano fue realizado por Erwin Stein, un músico austriaco amigo y discípulo de Schoenberg.
+        
+        El libreto de la obra está basado en dos tragedias de Frank Wedekind: ``El espíritu de la tierra'' y ``La Caja de Pandora''. 
+        
+        %argumento de la ópera
+        
+        
+        
+        %series utilizadas (por personaje)
+        
+        BERG: LULU: PRIMARY ROW
+        
+        {0,4,5,2,7,9,6,8,B,A,3,1} (Jarman)
+        
+        http://www.ccarh.org/publications/data/humdrum/tonerow/files/berg/berg10.pc.krn
+        
+        % argumento de esta aria
+        
+        \subsection{BERG: \textit{Der Wein}}
+        
+        BERG: DER WEIN
+        
+        {2,4,5,7,9,A,1,6,8,0,B,3}
+        
+        http://www.ccarh.org/publications/data/humdrum/tonerow/files/berg/berg09.pc.krn
+        
+        Der Wein (The Wine) (1929), Concert Aria for Soprano and Orchestra
+        
+        Alban Berg's concert aria Der Wein (1929) is a setting of three poems from Charles Baudelaire's ``Le Vin'' as translated into German by Stephan George: "Die Seele des Weines" (The Wine's Soul), "Der Wein der Liebenden" (The Wine of Lovers), "Der Wein des Einsamen" (The Wine of the Lonely One). The poems express not only the happiness and confidence (real or imagined) of those who enjoy wine's restorative powers, but also wine's celebration of itself as a giver of strength to the weak, pride to the poor, and inspiration to poets.
+        
+        Appropriately, Berg's setting is lush, evoking earthly sensations through the use of jazz elements and tango rhythms in the manner so popular in Europe in the 1920s. (Compare, for example, the contemporaneous music of Kurt Weill and Paul Hindemith.) The principal twelve-tone row Berg fashioned for Der Wein lends itself to the construction of diatonic sonorities: the first six pitches comprise most of a D minor scale, while of the row's remaining six, five are part of a G flat major scale. Few of Berg's works place as apparent an emphasis on symmetry as does Der Wein. There are no breaks between the poems, and the two outer songs provide the exposition and recapitulation of a sonata-form movement. ``Die Seele des Weines'' consists of an orchestral introduction, first and second theme groups with a transition, and closing material. All of this music, albeit abbreviated, returns in "Der Wien des Einsamen" in the same order and is followed by a coda. Where a traditional development section might be expected, Berg instead interpolates the scherzo-like "Der Wein der Liebenden." This middle song itself falls into three sections, the third of which is a retrograde of the second. Extended palindromes of this sort reappear in Berg's opera Lulu (1935), notably in the film music of Act II.
+        
+        Der Wein was commissioned by Ruzena Herlinger, who gave the first performance of the work in Frankfurt on June 4, 1930.
+        
+        \subsection{WEBERN: \textit{Variations}, OP. 27}     
+        
+        WEBERN: OP. 27--VARIATIONS FOR PIANO
+        
+        {3,B,A,2,1,0,6,4,7,5,9,8}
+        
+        \subsection{WEBERN: \textit{3 Lieder}, OP. 18}
+        
+        WEBERN: OP. 18, NO. 1, "SCHATZERL KLEIN"
+        
+        {0,B,5,8,A,9,3,4,1,7,2,6}
+        
+        WEBERN: OP. 18, NO. 2, "ERLOSUNG"
+        
+        {6,9,5,8,4,7,3,B,2,A,1,0}
+        
+        WEBERN: OP. 18, NO. 3, "AVE, REGINA COELORUM"
+        
+        {4,3,7,6,5,B,A,2,1,0,9,8}
