--- a/10.Musescore.tex
+++ b/10.Musescore.tex
@@ -2,7 +2,7 @@
     
     % 10.Plugin de Musescore, conclusiones
     
-    \section{OBRAS DE SCHOENBERG}
+    \section{OBRA DE SCHOENBERG}
    
    	Tomando la música debussiana y las músicas orientales como referencia, he escogido la escala pentatónica para aplicarla a la Musette de la Suite para piano Op. 25 de Schoenberg. Para relacionar la escala dodecafónica con la nueva escala, se debe crear una función que relacione las notas de ambos conjuntos. Yo he tomado esta función:
    	$$\left.\begin{matrix}\text{Escala dodecafónica:}&0&1&2&3&4&5&6&7&8&9&10&11\\\text{Escala pentatónica:}&0&0&2&2&4&4&7&7&7&9&9&0\\\end{matrix}\right.$$
